--- a/templates/base.html
+++ b/templates/base.html
@@ -66,9 +66,9 @@
             </form>
             -->
 
-            <form class="d-flex" method="post">
+            <form class="d-flex" method="post" action="/total_search">
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search_word">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
