--- a/templates/home_login.html
+++ b/templates/home_login.html
@@ -5,10 +5,9 @@
 안녕하세요. Team 4의 home_screen 입니다.
 <br>
 <form method="post" action= "/search/">
-    <label>재료 <input type="text" name="ingredients" value=" "></label><br><br>
-    <label>가격 <input type="text" name="price" value=" "></label><br><br>
-    <label>조리방법 <select name="how" ></label>
-        <option value=" ">=== 선택 ===</option>
+    <label>재료 <input type="text" name="ingredients" required></label><br><br>
+    <label>가격 <input type="text" name="price" required></label><br><br>
+    <label>조리방법 <select name="how" required></label>
         <option value="튀김">튀김</option>
         <option value="끓이기">끓이기</option>
         <option value="굽기">굽기</option>
@@ -24,35 +23,33 @@
         <option value="절임">절임</option>
         <option value="기타">기타</option>
       </select><br><br>
-      <label>카테고리 <select name="category" ></label>
-        <option value=" ">=== 선택 ===</option>
-        <option value="가공식품류">가공식품류</option>
-        <option value="쌀">쌀</option>
-        <option value="건어물류">건어물류</option>
-        <option value="버섯류">버섯류</option>
-        <option value="닭고기">닭고기</option>
-        <option value="채소류">채소류</option>
-        <option value="해물류">해물류</option>
-        <option value="밀가루">밀가루</option>
-        <option value="콩/견과류">콩/견과류</option>
-        <option value="과일류">과일류</option>
-        <option value="육류">육류</option>
-        <option value="달걀/유제품">달걀/유제품</option>
-        <option value="소고기">소고기</option>
-        <option value="돼지고기">돼지고기</option>
-        <option value="곡류">곡류</option>
+      <label>카테고리 <select name="category" required></label>
+        <option value="디저트">디저트</option>
+        <option value="밥/죽/떡">밥/죽/떡</option>
+        <option value="메인반찬">메인반찬</option>
+        <option value="면/만두">면/만두</option>
+        <option value="빵">빵</option>
+        <option value="양념/소스/잼">양념/소스/잼</option>
+        <option value="양식">양식</option>
+        <option value="스프">스프</option>
+        <option value="차/음료/술">차/음료/술</option>
+        <option value="밑반찬">밑반찬</option>
+        <option value="샐러드">샐러드</option>
+        <option value="국/탕">국/탕</option>
+        <option value="찌개">찌개</option>
+        <option value="김치/젓갈/장류">김치/젓갈/장류</option>
+        <option value="과자">과자</option>류</option>
+        <option value="퓨전">퓨전</option>
         <option value="기타">기타</option>
       </select><br><br>
-      <label>난이도 <select name="difficulty" ></label>
-        <option value=" ">=== 선택 ===</option>
+      <label>난이도 <select name="difficulty" required></label>
         <option value="아무나">아무나</option>
         <option value="초급">초급</option>
         <option value="중급">중급</option>
         <option value="고급">고급</option>
         <option value="신의경지">신의경지</option>
       </select><br><br>
-      <label>소요시간 <select name="time" ></label>
-        <option value=" ">=== 선택 ===</option>
+      <label>소요시간 <select name="time" required></label>
         <option value="5분이내">5분이내</option>
         <option value="10분이내">10분이내</option>
         <option value="15분이내">15분이내</option>
