--- a/templates/home.html
+++ b/templates/home.html
@@ -61,8 +61,11 @@
 
     <label>싫어요 : <input type="text" name="dislike" value=" "></label><br><br>
 
-    <input type="submit" value="레시피 검색">
+    <div class="buttons">
+      <button type="submit" value="레시피 검색">검색하기</button>
+      <button type="reset">재설정</button>
 </form>    
+
 
 {% endblock contents %}
 
