--- a/templates/home_login.html
+++ b/templates/home_login.html
@@ -62,6 +62,7 @@
     <label>싫어요 : <input type="text" name="dislike" value=" "></label><br><br>
 
     <input type="submit" value="레시피 검색">
+    <button type="reset">재설정</button>
 </form>    
 
 {% endblock contents %}
