--- a/templates/search_ing.html
+++ b/templates/search_ing.html
@@ -37,16 +37,20 @@
 {% else %}
 {% endif %}
 
-{{result}}
+
 {{res}}
 
 <table>
     <tr>
-        {% for i in image_urls %}
+        {% for j, i in enumerate(image_urls) %}
         <td><a href="https://www.10000recipe.com/recipe/{{i[1]}}"><img src={{i[0]}} width="250" height="250"></a>
         <figcaption><a href="https://www.10000recipe.com/recipe/{{i[1]}}" target = "_blank">{{i[2]}}</a></figcaption><!--target 옵션 (새 창에서 열림)--></td>
-        <h5>{{i[3]}}</h5> 
+        
+        <td><a href="https://www.10000recipe.com/recipe/{{rc_name[j][1]}}"></a>
+        <figcaption><a href="https://www.10000recipe.com/recipe/{{rc_name[j][1]}}" target = "_blank">{{rc_name[j][0]}}</a></figcaption></td>
+        <!--<p>{{i[3]}}</p> -->
         {% endfor %}
+
 
         <!--
         <td><a href="https://www.10000recipe.com/recipe/6876510"><img src="https://recipe1.ezmember.co.kr/cache/recipe/2017/09/15/ba4eaf1f56abf602889ce67b96ecfb301.jpg" width="250" height="250" 
