--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="/regis_recipe">레시피 등록</a>
               </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/table">양념 정보</a>
+            </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   기획의도
@@ -66,11 +70,6 @@
             </form>
             -->
 
-            <form class="d-flex" method="post" action="/total_search">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search_word">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
