--- a/templates/regis_recipe.html
+++ b/templates/regis_recipe.html
@@ -1,187 +1,191 @@
 {% extends "base_login.html" %} {% block contents %}
+<link rel="stylesheet" href="../static/regis_recipe.css">
+<main>
+  <h1>레시피 등록</h1>
 <div class="form_wrap">
-  <h1>레시피등록</h1>
   <form action="/regist_recipe/commit" method="post">
-    <label>레시피 이름 <input type="text" name="menu_name" /></label>
-    <br />
+    <div class="reci_name">
+      <label id="recipe_name">레시피 이름 </label>
+      <input id="name_input" type="text" name="menu_name" />
+    </div>
     <div id="ingred_wrap">
-      <fieldset>
-        <legend>재료입력</legend>
-          <div class="ingred1">
-            <input type="text" name="ingred1" placeholder="재료명을 입력해주세요"/>
-            <input type="text" name="ingred1_unit" placeholder="재료의 양을 입력해주세요">
-            <select name="ingred1_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred2">
-            <input type="text" name="ingred2" placeholder=" ex) 달걀"/>
-            <input type="text" name="ingred2_unit" placeholder=" 1     (단위선택) --->">
-            <select name="ingred2_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred3">
-            <input type="text" name="ingred3"/>
-            <input type="text" name="ingred3_unit">
-            <select name="ingred3_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred4">
-            <input type="text" name="ingred4"/>
-            <input type="text" name="ingred4_unit">
-            <select name="ingred4_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred5">
-            <input type="text" name="ingred5"/>
-            <input type="text" name="ingred5_unit">
-            <select name="ingred5_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred6">
-            <input type="text" name="ingred6"/>
-            <input type="text" name="ingred6_unit">
-            <select name="ingred6_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred7">
-            <input type="text" name="ingred7">
-            <input type="text" name="ingred7_unit">
-            <select name="ingred7_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred8">
-            <input type="text" name="ingred8"/>
-            <input type="text" name="ingred8_unit">
-            <select name="ingred8_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred9">
-            <input type="text" name="ingred9"/>
-            <input type="text" name="ingred9_unit">
-            <select name="ingred9_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-          <div class="ingred10">
-            <input type="text" name="ingred10"/>
-            <input type="text" name="ingred10_unit">
-            <select name="ingred10_unittype">
-              <option value="g">g</option>
-              <option value="ml">ml</option>
-              <option value="개">개</option>
-              <option value="단">단</option>
-              <option value="마리">마리</option>
-              <option value="모">모</option>
-              <option value="봉지">봉지</option>
-              <option value="송이">송이</option>
-              <option value="장">장</option>
-              <option value="컵">컵</option>
-              <option value="포기">포기</option>
-            </select>
-          </div>
-      </fieldset>
-      <fieldset>
-        <legend>기타 조리 정보 입력</legend>
-        <div class="class">
-          <label for="class">종류
+      <div class="left_wrap">
+        <p>재료입력</p>
+        <div class="ingred1">
+          <input type="text" name="ingred1" placeholder="재료명을 입력해주세요"/>
+          <input type="text" name="ingred1_unit" placeholder="재료의 양을 입력해주세요">
+          <select name="ingred1_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred2">
+          <input type="text" name="ingred2" placeholder=" ex) 달걀"/>
+          <input type="text" name="ingred2_unit" placeholder=" 1     (단위선택) --->">
+          <select name="ingred2_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred3">
+          <input type="text" name="ingred3"/>
+          <input type="text" name="ingred3_unit">
+          <select name="ingred3_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred4">
+          <input type="text" name="ingred4"/>
+          <input type="text" name="ingred4_unit">
+          <select name="ingred4_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred5">
+          <input type="text" name="ingred5"/>
+          <input type="text" name="ingred5_unit">
+          <select name="ingred5_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred6">
+          <input type="text" name="ingred6"/>
+          <input type="text" name="ingred6_unit">
+          <select name="ingred6_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred7">
+          <input type="text" name="ingred7">
+          <input type="text" name="ingred7_unit">
+          <select name="ingred7_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred8">
+          <input type="text" name="ingred8"/>
+          <input type="text" name="ingred8_unit">
+          <select name="ingred8_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred9">
+          <input type="text" name="ingred9"/>
+          <input type="text" name="ingred9_unit">
+          <select name="ingred9_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+        <div class="ingred10">
+          <input type="text" name="ingred10"/>
+          <input type="text" name="ingred10_unit">
+          <select name="ingred10_unittype">
+            <option value="g">g</option>
+            <option value="ml">ml</option>
+            <option value="개">개</option>
+            <option value="단">단</option>
+            <option value="마리">마리</option>
+            <option value="모">모</option>
+            <option value="봉지">봉지</option>
+            <option value="송이">송이</option>
+            <option value="장">장</option>
+            <option value="컵">컵</option>
+            <option value="포기">포기</option>
+          </select>
+        </div>
+      </div>
+      <div class="right_wrap">
+          <p>기타 조리 정보 입력</p>
+          <div class="class">
+            <label for="class">종류</label>
             <select name="class" id="class">
               <option value="과자">과자</option>
               <option value="국/탕">국/탕</option>
@@ -201,10 +205,9 @@
               <option value="퓨전">퓨전</option>
               <option value="기타">기타</option>
             </select>
-          </label>
-        </div>
-        <div class="class1">
-          <label for="class1">식품군
+          </div>
+          <div class="class1">
+            <label for="class1">식품군</label>
             <select name="class1" id="class1">
               <option value="가공식품류">가공식품류</option>
               <option value="건어물류">건어물류</option>
@@ -222,11 +225,10 @@
               <option value="콩/견과류">콩/견과류</option>
               <option value="해물류">해물류</option>
               <option value="기타">기타</option>
-            </select>
-          </label>    
-        </div>
-        <div class="method">
-          <label for="method">조리방법선택
+            </select>    
+          </div>
+          <div class="method">
+            <label for="method">조리방법선택</label>
             <select name="method" id="method">
               <option value="굽기">굽기</option>
               <option value="끓이기">끓이기</option>
@@ -243,10 +245,9 @@
               <option value="회">회</option>
               <option value="기타">기타</option>
             </select>
-          </label>
-        </div>
-        <div class="concept">
-          <label for="concept">상황
+          </div>
+          <div class="concept">
+            <label for="concept">상황</label>
             <select name="concept" id="concept">
               <option value="간식">간식</option>
               <option value="다이어트">다이어트</option>
@@ -262,10 +263,9 @@
               <option value="해장">해장</option>
               <option value="기타">기타</option>
             </select>
-          </label>
-        </div>
-        <div class="count">
-          <label for="count">조리양
+          </div>
+          <div class="count">
+            <label for="count">조리양</label>
             <select name="count" id="count">
               <option value="1인분">1인분</option>
               <option value="2인분">2인분</option>
@@ -274,10 +274,9 @@
               <option value="5인분">5인분</option>
               <option value="6인분이상">6인분이상</option>
             </select>
-          </label>
-        </div>
-        <div class="time">
-          <label for="time">조리시간
+          </div>
+          <div class="time">
+            <label for="time">조리시간</label>
             <select name="time" id="time">
               <option value="5분이내">5분이내</option>
               <option value="10분이내">10분이내</option>
@@ -288,14 +287,16 @@
               <option value="2시간이내">2시간이내</option>
               <option value="2시간이상">2시간이상</option>
             </select>
-          </label>
-        </div>
-      </fieldset>
-    <br /><br />
-    <input type="submit" value="등록" />
-    <input type="reset" value="재설정" />
+          </div>
+      </div>
+
+    </div>
+    <div class="buttons">
+      <input type="submit" value="등록" />
+      <input type="reset" value="재설정" />
+    </div>
   </form>
 </div>
-<link rel="stylesheet" href="../static/regi_recipe.css" />
+</main>
 
 {% endblock contents %}
