--- a/templates/search_ing.html
+++ b/templates/search_ing.html
@@ -5,51 +5,51 @@
 <main>
     <div class="info">
         <div class="search_name">
-            <!-- {% if ingredients != " " %}         -->
+            {% if ingredients != " " %}        
                 <p><span id="name">{{ingredients}}</span>(을)를 검색했어요.</p>
-            <!-- {% else %}
-            {% endif %} -->
+            {% else %}
+            {% endif %}
         </div>
         <div class="price">
-            <!-- {% if price != " " %} -->
+            {% if price != " " %}
                 <p><span id="price">{{price}}</span>원 이내로 만들 수 있는 레시피에요.</p>
-            <!-- {% else %}
-            {% endif %} -->
+            {% else %}
+            {% endif %}
         </div>
     
         <div class="how">
-            <!-- {% if how != " " %} -->
+            {% if how != " " %}
                 <p><span id="how">{{how}}</span>방법으로 요리를 원해요.</p>
-            <!-- {% else %}
-            {% endif %} -->
+            {% else %}
+            {% endif %}
         </div>
     
         <div class="category">
-            <!-- {% if category != " " %} -->
+            {% if category != " " %}
                 <p><span id="category">{{category}}</span> 카테고리에 있는 레시피에요.</p>
-            <!-- {% else %}
-            {% endif %} -->
+            {% else %}
+            {% endif %}
         </div>
     
         <div class="difficulty">
-            <!-- {% if difficulty != " " %} -->
+            {% if difficulty != " " %}
                 <p><span id="diff">{{difficulty}}</span> 의 난이도를 원해요.</p>
-            <!-- {% else %}
-            {% endif %} -->
+            {% else %}
+            {% endif %}
         </div>
     
         <div class="time">
-            <!-- {% if time != " " %} -->
+            {% if time != " " %}
                 <p><span id="time">{{time}}</span> 시간동안 만들 수 있는 레시피에요.</p>
-            <!-- {% else %}
-            {% endif %} -->
+            {% else %}
+            {% endif %}
         </div>
     
         <div class="dislike">
-            <!-- {% if dislike != " " %} -->
+            {% if dislike != " " %}
                 <p><span id="dislike">{{dislike}}</span> (이)가 포함되지 않은 레시피를 준비했어요.</p>
-            <!-- {% else %}
-            {% endif %} -->
+            {% else %}
+            {% endif %}
         </div>
     
     </div>
