--- a/templates/table.html
+++ b/templates/table.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block contents %}
+{% extends "base_login.html" %} {% block contents %}
 <link rel="stylesheet" href="../static/source.css">
 <article class="page sans">
   <div class="page_wrap">
@@ -138,8 +138,6 @@
     </div>
   </div>
 </article>
-<div class="buttons">
-  <button><a href='/' style="text-decoration: none;">돌아가기</a></button>
-</div>
+
 
 {% endblock contents %}
