--- a/static/total_search.css
+++ b/static/total_search.css
@@ -6,13 +6,20 @@ main {
     color: black;
 }
 .info {
-    font-size: 1.3rem;
+    padding-top: 3rem;
+    font-size: 2.5rem;
+    text-align: center;
 }
 #search_word {
-    font-size: 1.7rem;
+    font-size: 3rem;
     font-weight: bold;
 }
 .list {
     display: grid;
-    grid-template-columns: 5;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+.item {
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
 }
