--- a/templates/base_login.html
+++ b/templates/base_login.html
@@ -34,13 +34,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="/regis_recipe">레시피 등록</a>
               </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/table">양념 정보</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   기획의도
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">비전</a></li>
-                  <li><a class="dropdown-item" href="#">시장분석</a></li>
+                  <li><a class="dropdown-item" href="/market">시장분석</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
@@ -75,11 +77,6 @@
             </form>
             -->
 
-            <form class="d-flex" method="post" action="/total_search">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search_word">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
