포트폴리오용 css 수정본

--- a/templates/home_login.html
+++ b/templates/home_login.html
@@ -83,7 +83,6 @@
       </div>
 -->
 
-<img src="https://i.pinimg.com/564x/97/7a/6b/977a6b37e6c52a9b6da0f8c4881276cf.jpg" class="img-fluid" alt="base" style="transform:rotate(270deg);">
 
 <div class="container my-5">
   <h2 class="my-3 border-bottom pb-2">레시피 검색하기</h2>    
@@ -185,7 +184,7 @@
       <div class="card" style="width: 18rem;">
         <img src="https://images.chosun.com/resizer/wsSVlD2KlkIAXTYSWUZxQSceAUE=/960x504/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/HS2MWHN32OMYMSDYNGYRIZCXNI.jpg" class="card-img-top" alt="pasta" width="150" height="200">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">양식을 찾고있나요?<br>여섯 가지 재료만으로 맛과 향이 풍부한 토마토 파스타를 만들 수 있어요. 레시피에 필요한 재료비용은 6,600원이에요</p>
         </div>
       </div>      
     </div>
@@ -193,7 +192,7 @@
       <div class="card" style="width: 18rem;">
         <img src="https://img.danawa.com/prod_img/500000/653/027/img/8027653_1.jpg?shrink=330:330&_v=20220530173400" class="card-img-top" alt="mara" width="150" height="200">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">술과 함께하면 좋을 음식으로 마라탕을 추천해요! <br>집에서도 간단히 만들 수 있는 마라탕 레시피! 레시피에 필요한 재료 비용은 9,000원이에요</p>
         </div>
       </div>      
     </div>
@@ -201,7 +200,7 @@
       <div class="card" style="width: 18rem;">
         <img src="https://www.tokyoweekender.com/wp-content/uploads/2020/09/Natto-Tokyo-Weekender.jpg" class="card-img-top" alt="natto" width="150" height="200">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">슈퍼푸드 낫또! <br>아직 낫또가 낯선 분들을 위한 낫또 레시피가 여기 있어요. 맛과 건강을 모두 잡은 레시피의 비용은 4,120원이에요</p>
         </div>
       </div>
     </div>
